+Fix hard crash that could occur when processing auto-completion data for some
Python modules with a py2exe version of Editra.
+Clear existing keybinding when assigning to new action in keybinding editor.
+Fix issue with updating styles after overwriting or updating an existing
style sheet with new settings.
+Fix bug in style editor that would warn about changes when no changes have been made.

#-----------------------------------------------------------------------------#
VERSION 0.6.00
DATE 01/15/2011
39th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improve Python AutoIndenter to better handle brackets (patch from Jens)
+Add Copy Filename option to tab menu (patch from Michael Rans)
+Extend Vi emulation mode to support motions for Enter, Space, and Backspace
+Improve file type detection for files that don't have file extensions.
+Add support for Cilk syntax highlighting (patch from michael.champigny)

BUG FIXES:
+Fix Python 2.5 compatibility issue.
+Fix Unicode handling issue in Python completer.
+Fix issue with incorrect dwell events being sent causing the calltip popups
to be shown when they shouldn't even after the mouse has left the window.
+Fix bug in RemoveAllBookmarks method when called from EditraStc instance.
+Fix Unicode handling issue in Replace All feature.
+Fix issue where cursor would still appear active in the text buffer even when
it did not have the keyboard focus.
+Fix DeadObject error that could occur after deletion of a secondary main window.
+Fix incorrect tab activation that could occur after doing a tab drag and drop
operation from an external notebook.
+Fix bug in update checker that would cause the check for an update to fail.
+Fix bug in style sheet parser that could lead to a crash when loading a
malformed Editra style sheet.
+Fix Cut/Delete line commands for when the selection includes the last line.
+Fix Put command behavior in vi emulation to put it after the current carat position.