@@ -56,6 +56,7 @@ Python modules with a py2exe version of Editra.
 +Fix issue with updating styles after overwriting or updating an existing
 style sheet with new settings.
 +Fix bug in style editor that would warn about changes when no changes have been made.
++Handle styling some additional CSS2 keywords (outline, left).
 
 #-----------------------------------------------------------------------------#
 VERSION 0.6.00
